--- a/index.html
+++ b/index.html
@@ -11,14 +11,29 @@
 		<header>
 			<h1 class="page-title">Task Up!</h1>
 			<p>Click the button below to add a new task!</p>
-			<button class="btn" id="save-task">Another One!</button>
+			<form id="task-form">
+				<div class="form-group">
+					<input type="text" name="task-name" placeholder="Enter Task Name" />
+				</div>
+				<div class="form-group">
+					<select name="task-type" class="select-dropdown">
+						<option value="" disabled selected>Pick a task type</option>
+						<option value="Personal">Personal</option>
+						<option value="Work">Work</option>
+						<option value="Family">Family</option>
+						<option value="Passion">Passion</option>
+						<option value="Investigation">Investigation</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<button class="btn" id="save-task" type="submit">Another One!</button>
+				</div>
+			</form>
 		</header>
 		<main class="page-content">
 			<section class="task-list-wrapper">
 				<h2 class="list-title">Tasks To Do</h2>
-				<ul class="task-list" id="tasks-to-do">
-					<li class="task-item">A task is going to be added soon!</li>
-				</ul>
+				<ul class="task-list" id="tasks-to-do"></ul>
 			</section>
 		</main>
 		<footer>&COPY;2022 by Task Up!</footer>
