--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 		<main class="page-content">
 			<section class="task-list-wrapper">
 				<h2 class="list-title">Tasks To Do</h2>
-				<ul class="task-list" id="tasks-to-do"></ul>
+				<ul class="task-list" id="tasks-to-do">
+					<li class="task-item">"This is it!"</li>
+				</ul>
 			</section>
 		</main>
 		<footer>&COPY;2022 by Task Up!</footer>
